# envoy

./: CODEOWNERS  STYLE.md  go.mod
.github/actions/pr_notifier/: requirements.txt
.github/workflows/: _cache_docker.yml  _ci.yml  _env.yml  _request_cache_bazel.yml  _run.yml  _stage_publish.yml  _workflow-start.yml  android_build.yml  android_tests.yml  asan.yml  codeql-daily.yml  codeql-push.yml  commands.yml  coverage.yml  docs.yml  envoy-dependency.yml  envoy-release.yml  envoy-sync.yml  format.yml  mobile-android_tests.yml  perf.yml  scorecard.yml  tsan.yml  workflow-complete.yml
api/: BUILD
api/versioning/: BUILD
changelogs/: current.yaml
ci/: Dockerfile-distroless-testing
docs/root/_include/: ssl_stats.rst
docs/tools/python/: requirements.txt
envoy/server/overload/: overload_manager.h
examples/grpc-bridge/client/: Dockerfile  requirements.txt
examples/grpc-bridge/server/: Dockerfile
examples/local_ratelimit/: Dockerfile-nginx
examples/mcp_router/: Cargo.toml  aggregation.rs  config.rs  jsonrpc.rs  lib.rs  mcp_envoy.yaml  method.rs  session.rs  sse.rs
examples/shared/flask/: Dockerfile
examples/shared/golang/: Dockerfile
examples/shared/jaeger/: Dockerfile
examples/shared/node/: Dockerfile
examples/shared/python/: Dockerfile
examples/single-page-app/ui/: package.json
mobile/docs/: requirements.txt
mobile/tools/python/: requirements.txt
source/common/tls/: stats.h  (+1 more)
source/extensions/: extensions_build_config.bzl  extensions_metadata.yaml
tools/base/: requirements.in  requirements.txt
tools/dependency/: requirements.txt
(+90 files in other folders)
