[package]
name = "mcp_router"
version = "0.1.0"
edition = "2021"
description = "MCP Gateway Router - Envoy Dynamic Module for multiplexing MCP backends"
license = "Apache-2.0"

[lib]
path = "lib.rs"
crate-type = ["cdylib"]

[dependencies]
envoy-proxy-dynamic-modules-rust-sdk = { path = "../../source/extensions/dynamic_modules/sdk/rust" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.21"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[features]
default = []
